[package]
name = "rust-raft"
version = "0.1.0"
edition = "2024"

# [[bin]]
# name = "helloworld-server"
# path = "src/bin/server.rs"

# [[bin]]
# name = "helloworld-client"
# path = "src/bin/client.rs"

[dependencies]
tokio = {version = "1.0", features = ["full"]}
tokio-util = "0.7"
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
rand = "0.8"
tracing = "*"
tracing-subscriber = {version = "*", features = ["fmt", "time"]}
tracing-appender = "*"
chrono = "*"
time = {version = "*", features = ["formatting", "local-offset", "macros"]}
ctor = "0.6"
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"